# lazygsf

./: .gitmodules  CMakeLists.txt  README.md  gsf2wav.c  gsfplayer.pc.in  lazygsf.pc.in
psflib/: psf2fs.c  psflib.c
src/: gsfplayer.c  gsfplayer.h  lazygsf.c  lazygsf.def  lazygsf.h
